# CGHomework-Kiyashko

./: .gitignore  .nvimrc  CMakeLists.txt  Optimizations.txt
resources/scenes/043_cornell_normals/: statex_00001.xml
resources/scenes/cornell/: change_00000.xml  statex_00001.xml
resources/shaders/: apply_ssao.frag  apply_volfog.frag  apply_volfog.frag.spv  blur_ssao.comp  blur_ssao.comp.spv  common.h  compile_quad_render_shaders.py  compile_shadowmap_shaders.py  face_color.frag.inc  frustrum_culling.comp  frustrum_culling.comp.spv  fullscreen_quad.vert  gauss_post_proc.comp  gauss_post_proc.comp.spv  generate_hmap.comp  generate_hmap.comp.spv  generate_ssao.frag  generate_ssao.frag.spv  generate_volfog.comp  generate_volfog.comp.spv  instanced.vert  instanced.vert.spv  main_shader.frag.inc  my_quad.frag  my_quad.frag.bkp  my_quad.frag.spv  noise.glsl.inc  particles.frag  particles.frag.spv  particles.vert  particles.vert.spv  particles_emit.comp  particles_emit.comp.spv  particles_simulate.comp  particles_simulate.comp.spv  particles_sort.comp  particles_sort.comp.spv  pcf_resolve.frag.spv  pcf_shadow.frag  pcf_shadow.frag.spv  (+44 more)
src/render/: bbox_renderer.cpp  bbox_renderer.h  compute_common.h  postfx_renderer.cpp  postfx_renderer.h  quad_renderer.cpp  quad_renderer.h  render_common.h  render_gui.h  scene_mgr.cpp  scene_mgr.h
src/samples/quad2d/: CMakeLists.txt  draw.cpp  main.cpp  present.cpp  quad2d_render.cpp  quad2d_render.h  render_init.cpp  update.cpp
src/samples/shadowmap/: CMakeLists.txt  aa.cpp  common.cpp  deferred.cpp  (+16 more)
src/utils/: glfw_window.cpp
(+5 files in other folders)
